# ensemble-webapp

./: README.md  pyproject.toml
backend/: manage.py
backend/ensemble/: admin.py  apps.py  models.py  pagination.py  serializers.py  signals.py  urls.py  views.py
backend/ensemble_webapp/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: admin.py  models.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Footer.jsx  HeroHeader.jsx  MainContent.jsx  Navigation.jsx  ScrollToTop.jsx  VideoPosts.jsx
frontend/src/pages/: GalleryPage.jsx  HomePage.jsx
frontend/src/styles/components/: Footer.css  Gallery.css  HeroHeader.css  MainContent.css  Navigation.css  ScrollToTop.css  VideoPosts.css
